@@ -17,32 +17,34 @@ public class HabrCareerParse implements Parse {
     private static final String SOURCE_LINK = "https://career.habr.com";
     private static final String PREFIX = "/vacancies?page=";
     private static final String SUFFIX = "&q=Java%20developer&type=all";
+    private static final int PAGES = 5;
 
     @Override
     public List<Post> fetch() {
         var result = new ArrayList<Post>();
         try {
             DateTimeParser dateTimeParser = new HabrCareerDateTimeParser();
-            int pageNumber = 1;
-            String fullLink = "%s%s%d%s".formatted(SOURCE_LINK, PREFIX, pageNumber, SUFFIX);
-            var connection = Jsoup.connect(fullLink);
-            var document = connection.get();
-            var rows = document.select(".vacancy-card__inner");
-            rows.forEach(row -> {
-                var titleElement = row.select(".vacancy-card__title").first();
-                var linkElement = titleElement.child(0);
-                var dateElement = row.select(".vacancy-card__date").first();
-                String vacancyName = titleElement.text();
-                String link = String.format("%s%s", SOURCE_LINK,
-                        linkElement.attr("href"));
-                String dateTime = dateElement.child(0).attr("datetime");
-                LocalDateTime localDateTime = dateTimeParser.parse(dateTime);
-                var post = new Post();
-                post.setTitle(vacancyName);
-                post.setLink(link);
-                post.setTime(localDateTime.toInstant(ZoneOffset.UTC).toEpochMilli());
-                result.add(post);
-            });
+            for (int currentPage = 1; currentPage <= PAGES; currentPage++) {
+                String fullLink = "%s%s%d%s".formatted(SOURCE_LINK, PREFIX, currentPage, SUFFIX);
+                var connection = Jsoup.connect(fullLink);
+                var document = connection.get();
+                var rows = document.select(".vacancy-card__inner");
+                rows.forEach(row -> {
+                    var titleElement = row.select(".vacancy-card__title").first();
+                    var linkElement = titleElement.child(0);
+                    var dateElement = row.select(".vacancy-card__date").first();
+                    String vacancyName = titleElement.text();
+                    String link = String.format("%s%s", SOURCE_LINK,
+                            linkElement.attr("href"));
+                    String dateTime = dateElement.child(0).attr("datetime");
+                    LocalDateTime localDateTime = dateTimeParser.parse(dateTime);
+                    var post = new Post();
+                    post.setTitle(vacancyName);
+                    post.setLink(link);
+                    post.setTime(localDateTime.toInstant(ZoneOffset.UTC).toEpochMilli());
+                    result.add(post);
+                });
+            }
         } catch (IOException e) {
             LOGGER.error("When load page", e);
         }
